--- a/locale/ru.json
+++ b/locale/ru.json
@@ -1,1 +1,15 @@
-{}
+{
+  "menu": {
+    "about": "О платформе",
+    "ico": "ICO",
+    "docs": "Документы",
+    "roadmap": "Дорожная карта",
+    "team": "Команда"
+  },
+  "component": {
+
+  },
+  "about": {
+    "hint": "Система прав цифровой эпохи"
+  }
+}
